[gd_scene load_steps=5 format=2]

[ext_resource path="res://stages/stage1/wave1/Wave1.gd" type="Script" id=1]
[ext_resource path="res://stages/stage1/wave1/PathLeft.gd" type="Script" id=2]
[ext_resource path="res://stages/stage1/wave1/PathRight.gd" type="Script" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 27.7102, -53.9977, -53.3817, -43.132, 53.3817, 43.132, 100.317, 31.9229, -77.3204, -32.4322, 77.3204, 32.4322, 427.12, 21.5727, 0, 0, 0, 0, 503.72, 98.5768, 0, 0, 0, 0, 505.006, 571.628 )
}

[node name="Wave1" type="Node"]
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ 240.395, 784.032 ]
}

[node name="PathLeft" type="Path2D" parent="."]
position = Vector2( 188, 61 )
scale = Vector2( 1.10024, 1.14507 )
curve = SubResource( 1 )
script = ExtResource( 2 )

[node name="EnemySpawnTimer" type="Timer" parent="PathLeft"]
wait_time = 0.2

[node name="PathRight" type="Path2D" parent="."]
position = Vector2( 836, 61 )
scale = Vector2( -1.1, 1.145 )
curve = SubResource( 1 )
script = ExtResource( 3 )

[node name="EnemySpawnTimer" type="Timer" parent="PathRight"]
wait_time = 0.2

[node name="WaveDurationTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="PathLeft/EnemySpawnTimer" to="PathLeft" method="_on_EnemySpawnTimer_timeout"]
[connection signal="timeout" from="PathRight/EnemySpawnTimer" to="PathRight" method="_on_EnemySpawnTimer_timeout"]
[connection signal="timeout" from="WaveDurationTimer" to="." method="_on_WaveDurationTimer_timeout"]
